--- a/app/src/main/res/layout/a_home.xml
+++ b/app/src/main/res/layout/a_home.xml
@@ -5,7 +5,8 @@
     android:id="@+id/home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:fitsSystemWindows="true">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/logoholder"
@@ -29,6 +30,7 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="264dp"
         android:layout_height="71dp"
         android:orientation="vertical"
@@ -97,5 +99,17 @@
             app:strokeColor="@color/pure_color"
             app:strokeWidth="2dp" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/admin"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
