--- a/app/src/main/res/layout/c_signin.xml
+++ b/app/src/main/res/layout/c_signin.xml
@@ -4,7 +4,8 @@
     android:id="@+id/signin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:fitsSystemWindows="true">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/logoholder"
