--- a/app/src/main/res/layout/c_signinprofilephoto.xml
+++ b/app/src/main/res/layout/c_signinprofilephoto.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="24dp"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:fitsSystemWindows="true">
 
     <TextView
         android:layout_width="wrap_content"
