--- a/app/src/main/res/layout/d1_feed.xml
+++ b/app/src/main/res/layout/d1_feed.xml
@@ -76,6 +76,7 @@
             android:layout_marginEnd="8dp"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
