--- a/app/src/main/res/layout/g_closet_item_photo.xml
+++ b/app/src/main/res/layout/g_closet_item_photo.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     android:background="@drawable/bg_dress_category">
 
     <ImageView
