--- a/app/src/main/res/layout/i_profile_addmodel.xml
+++ b/app/src/main/res/layout/i_profile_addmodel.xml
@@ -10,6 +10,7 @@
         android:id="@+id/constraintLayout14"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
