--- a/app/src/main/res/layout/b_login.xml
+++ b/app/src/main/res/layout/b_login.xml
@@ -14,11 +14,11 @@
         android:background="#181918"
         app:cardBackgroundColor="#181918"
         app:cardCornerRadius="90dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.18">
+        app:layout_constraintVertical_bias="0.85">
 
         <ImageView
             android:id="@+id/logo"
@@ -29,46 +29,46 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:layout_width="264dp"
-        android:layout_height="71dp"
+        android:id="@+id/linearLayout8"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35000002">
+        app:layout_constraintVertical_bias="0.95">
 
         <TextView
             android:id="@+id/webname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins"
             android:gravity="center"
             android:text="PHINDEE"
-            android:textSize="26sp"
+            android:textSize="28sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/motto"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:fontFamily="@font/poppins"
             android:gravity="center"
             android:text="Let's Find Your Style"
-            android:textSize="24sp"
-            android:textStyle="normal" />
+            android:textSize="24sp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="347dp"
-        android:layout_height="154dp"
+        android:id="@+id/linearLayout10"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.57">
+        app:layout_constraintVertical_bias="0.90">
 
         <TextView
             android:id="@+id/email"
@@ -85,11 +85,11 @@
             android:layout_weight="2"
             android:background="@drawable/edittext_border"
             android:ems="10"
-            android:textColorHint="#040000"
-            android:textColor="#040000"
             android:hint=" Enter Email"
             android:inputType="text"
             android:padding="10dp"
+            android:textColor="#040000"
+            android:textColorHint="#040000"
             android:textSize="14sp" />
 
         <TextView
@@ -113,14 +113,15 @@
             android:ems="10"
             android:hint="Enter Password"
             android:inputType="textPassword"
-            android:textColorHint="#040000"
-            android:textColor="#040000"
             android:padding="10dp"
+            android:textColor="#040000"
+            android:textColorHint="#040000"
             android:textSize="14sp" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout11"
         android:layout_width="352dp"
         android:layout_height="69dp"
         android:orientation="vertical"
@@ -129,7 +130,7 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75">
+        app:layout_constraintVertical_bias="0.80">
 
         <Button
             android:id="@+id/loginbutton"
